[package]
name = "actix-ql"
version = "0.1.0"
authors = ["Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.1.29"
juniper = "0.14.1"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
